@@ -17,9 +17,7 @@ class Pageselector(gtk.Dialog):
         self.set_default_response(gtk.RESPONSE_OK)
         self.set_has_separator(False)
         self.connect('response', self._response)
-        self.set_has_separator(False)
         self.set_resizable(True)
-        self.set_default_response(gtk.RESPONSE_CLOSE)
 
         # Start thumbnail generation in case it has been delayed
         self._window.thumbnailsidebar.load_thumbnails(True)
@@ -38,7 +36,8 @@ class Pageselector(gtk.Dialog):
         self._page_selector.set_digits( 0 )
 
         self._page_spinner = gtk.SpinButton(self._selector_adjustment)
-        self._page_spinner.connect( 'value-changed', self._cb_value_changed )
+        self._page_spinner.connect( 'insert-text', self._page_text_insert )
+        self._page_spinner.connect( 'changed', self._page_text_changed )
         self._page_spinner.set_activates_default(True)
         self._pages_label = gtk.Label(_(' of %s') % self._number_of_pages)
         self._pages_label.set_alignment(0, 0.5)
@@ -62,19 +61,37 @@ class Pageselector(gtk.Dialog):
         self.get_content_area().pack_end(selection_box, False)
         self.show_all()
 
+        # Set focus on the input box.
+        self._page_spinner.select_region(0, -1)
+        self._page_spinner.grab_focus()
+
     def _cb_value_changed(self, *args):
+        """ Called whenever the spinbox value changes. Updates the preview thumbnail. """
         self._set_thumbnail(int(self._selector_adjustment.value) - 1)
+
+    def _page_text_insert(self, control, new_text, new_text_length, position, *args):
+        """ Called whenever a new string is being inserted into the page selector entry.
+            Used to prevent entering non-digits. """
+        if not new_text.isdigit():
+            control.stop_emission('insert-text')
+
+    def _page_text_changed(self, control, *args):
+        """ Called when the page selector has been changed. Used to instantly update
+            the preview thumbnail when entering page numbers by hand. """
+        if control.get_text().isdigit():
+            page = int(control.get_text())
+            if page > 0 and page <= self._number_of_pages:
+                control.set_value(page)
 
     def _response(self, widget, event, *args):
         if event == gtk.RESPONSE_OK:
             self._window.set_page(int(self._selector_adjustment.value))
-            self.emit('close')
-        elif event == gtk.RESPONSE_CANCEL:
-            self.emit('close')
+
+        self.destroy()
 
     def _set_thumbnail(self, page):
         """ Set the preview thumbnail for the page selector.
-        If a thumbnail isn't cached yet, use MISSING_IMAGE_ICON. """
+        If a thumbnail isn't cached yet, use a transparent image. """
 
         pixbuf = self._window.thumbnailsidebar.get_thumbnail(page + 1)
         self._image_preview.set_from_pixbuf(pixbuf)
